--- a/Echantillon contrôle.ipynb
+++ b/Echantillon contrôle.ipynb
@@ -21,46 +21,46 @@
    "source": [
     "#############################################################\n",
     "#############################################################\n",
-    "df = pd.read_excel(\"../2025/T1/Requete PC_AC_2025_01.xlsx\", sheet_name=0) #Il faudra changer le chemin et/ou le nom du fichier ici d'un mois/trimestre/année à l'autre\n",
+    "df = pd.read_excel("data/input_fichier.xlsx") #Il faudra changer le chemin et/ou le nom du fichier ici d'un mois/trimestre/année à l'autre\n",
     "#############################################################\n",
     "#############################################################\n",
     "\n",
     "#Ajout d'une colonne ID_global au cas où Index n'est pas unique (s'il y a plusieurs mois dans la requête par exemple)\n",
     "df['ID_global'] = df.index\n",
     "\n",
-    "#On filtre les lignes où 'Flag contrôle' vaut 'N'\n",
-    "df_filtered = df[df['Flag contrôle'] == 'N'].copy()\n",
+    "#On filtre les lignes où 'Fcontrole' vaut 'N'\n",
+    "df_filtered = df[df['Fcontrole'] == 'N'].copy()\n",
     "\n",
-    "#On enregistre les lignes où 'Flag contrôle' vaut 'O' pour plus tard\n",
-    "df_flag_O = df[df['Flag contrôle'] == 'O'].copy()\n",
+    "#On enregistre les lignes où 'Fcontrole' vaut 'O' pour plus tard\n",
+    "df_flag_O = df[df['Fcontrole'] == 'O'].copy()\n",
     "\n",
     "#On définit une fonction pour attribuer une strate à chaque ligne\n",
     "def assign_strate(row):\n",
     "    #On définit les conditions pour l'automatisation\n",
-    "    if row['Numéro agent'].startswith('I'):\n",
-    "        if row['Nature de prestation'] in ['Mater Surveillance/soins santé', 'Maladie Consultations', 'Maladie Soins dentaires']:\n",
+    "    if row['Nagent'].startswith('I'):\n",
+    "        if row['Nprestation'] in ['Liste des critères']:\n",
     "            return 'Auto1'\n",
-    "        elif row['Nature de prestation'] in ['Maladie Radio Z/ZB/KE', 'Maladie Actes Techniq. Medicaux', 'Maladie Analyses/prélèvements', 'Maladie Aux med/SF', 'Maladie Pharmacie', 'Mal. Fournitures et appareillage']:\n",
+    "        elif row['Nprestation'] in ['Liste des critères']:\n",
     "            return 'Auto2'\n",
     "    \n",
     "    #On définit les conditions pour l'acte de ville\n",
-    "    if row['Numéro agent'][0] not in ['A', 'I'] and row['Libellé type prestation'] == 'Acte de ville':\n",
-    "        if row['Code région'] in [1, 2, 3]:\n",
-    "            if row['Nature de prestation'] in ['Maladie Radio Z/ZB/KE', 'Maladie Transports', 'Mater Surveillance/soins santé', 'Maladie Analyses/prélèvements', 'Maladie Actes Techniq. Medicaux', 'Maladie Soins dentaires', 'Maladie Aux med/SF', 'Maladie Pharmacie']:\n",
+    "    if row['Nagent'][0] not in ['A', 'I'] and row['LTprestation'] == 'Acte de ville':\n",
+    "        if row['Crégion'] in [1, 2, 3]:\n",
+    "            if row['Nprestation'] in ['Liste des critères']:\n",
     "                return 'AV1'\n",
-    "            elif row['Nature de prestation'] in ['Maladie Consultations', 'Maladie Optique', 'Mal. Fournitures et appareillage']:\n",
+    "            elif row['Nprestation'] in ['Liste des critères']:\n",
     "                return 'AV2'\n",
-    "        elif row['Code région'] == 0:\n",
-    "            if row['Nature de prestation'] in ['Maladie Consultations', 'Maladie Optique', 'Maladie Pharmacie', 'Maladie Autres PN', 'Maladie Aux med/SF']:\n",
+    "        elif row['Crégion'] == 0:\n",
+    "            if row['Nprestation'] in ['Liste des critères']:\n",
     "                return 'AV3'\n",
-    "            elif row['Nature de prestation'] in ['Maladie Cures thermales', 'Maladie Soins dentaires', 'Maladie Frais hospitalisation', 'Maladie: SOINS SANTE IVG', 'Maladie Visites', 'Maladie Radio Z/ZB/KE', 'Maladie Transports', 'Maladie Analyses/prélèvements', 'Mater Surveillance/soins santé', 'Maladie Chir K/KC/KCC', 'Maladie Orthopedie']:\n",
+    "            elif row['Nprestation'] in ['Liste des critères']:\n",
     "                return 'AV4'\n",
-    "        elif row['Code région'] in [4, 5]:\n",
+    "        elif row['Crégion'] in [4, 5]:\n",
     "            return 'AV5'\n",
     "\n",
     "    #On définit les conditions pour l'hospitalisation\n",
-    "    if row['Numéro agent'][0] not in ['A', 'I'] and row['Libellé type prestation'] == 'Hospitalisation':\n",
-    "        if row['Code région'] == 0:\n",
+    "    if row['Nagent'][0] not in ['A', 'I'] and row['LTprestation'] == 'Hospitalisation':\n",
+    "        if row['Crégion'] == 0:\n",
     "            return 'H1'\n",
     "        else:\n",
     "            return 'H2'\n",
@@ -73,14 +73,14 @@
     "print('Strates assignées')\n",
     "\n",
     "#On définit une nouvelle fonction pour attribuer une 'Strate décompte' dans les cas où un décompte serait représenté dans plusieurs strates\n",
-    "#On attribue la strate la plus représentée en terme de montant remboursé\n",
+    "#On attribue la strate la plus représentée en terme de Mremboursé\n",
     "def assign_strate_decompte(decompte):\n",
     "    #On filtre les lignes où la strate est définie\n",
     "    decompte_valid = decompte[decompte['Strate'].notna()]\n",
     "\n",
     "    #Si le décompte n'est pas vide après filtrage, on peut calculer la somme des montants remboursés par strate\n",
     "    if not decompte_valid.empty:\n",
-    "        sum_by_strate = decompte_valid.groupby('Strate')['Montant remboursé'].sum()\n",
+    "        sum_by_strate = decompte_valid.groupby('Strate')['Mremboursé'].sum()\n",
     "        #On trouve la strate avec la somme la plus élevée\n",
     "        max_strate = sum_by_strate.idxmax()\n",
     "        #On attribue cette strate à toutes les lignes du décompte\n",
@@ -92,7 +92,7 @@
     "    return decompte\n",
     "\n",
     "#On applique la fonction sur chaque décompte\n",
-    "df_final = df_filtered.groupby('No décompte').apply(assign_strate_decompte)\n",
+    "df_final = df_filtered.groupby('Ndecompte').apply(assign_strate_decompte)\n",
     "df_final = df_final.reset_index(drop=True)\n",
     "print('Strates décompte assignées')"
    ]
@@ -103,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#On réinjecte les lignes où 'Flag contrôle' vaut 'O'\n",
+    "#On réinjecte les lignes où 'Fcontrole' vaut 'O'\n",
     "df_concat = pd.concat([df_final, df_flag_O], ignore_index=True)\n",
     "df_concat = df_concat.sort_values('ID_global')\n",
     "df_concat"
@@ -120,7 +120,7 @@
     "strates = df_concat.iloc[:, -2:]\n",
     "#############################################################\n",
     "#############################################################\n",
-    "strates.to_excel('../2025/T1/strates.xlsx', index=False) #Il faudra changer le chemin d'enregistrement d'un trimestre/année à l'autre\n",
+    "strates.to_excel('data/output_fichier.xlsx', index=False) #Il faudra changer le chemin d'enregistrement d'un trimestre/année à l'autre\n",
     "#############################################################\n",
     "#############################################################"
    ]
@@ -134,7 +134,7 @@
     "#On compte le nombre de décomptes à contrôler a posteriori\n",
     "\n",
     "#On filtre pour ne conserver que les montants positifs\n",
-    "df_concat_filtered = df_concat[df_concat['Montant remboursé'] > 0]\n",
+    "df_concat_filtered = df_concat[df_concat['Mremboursé'] > 0]\n",
     "\n",
     "#On créé la colonne 'Processus' en fonction de 'Strate décompte'\n",
     "conditions = [\n",
@@ -152,13 +152,13 @@
     "df_concat_filtered['Mois'] = df_concat_filtered['Date de règlement'].dt.to_period('M')\n",
     "\n",
     "#On groupe par 'Processus', 'Strate décompte' et 'Mois', pour calculer le nombre de décomptes uniques\n",
-    "df_resultat = df_concat_filtered.groupby(['Processus', 'Strate décompte', 'Mois'])['No décompte'].nunique().reset_index()\n",
+    "df_resultat = df_concat_filtered.groupby(['Processus', 'Strate décompte', 'Mois'])['Ndecompte'].nunique().reset_index()\n",
     "\n",
     "#On calcule la somme de décomptes pour chaque 'Processus' par 'Mois'\n",
-    "somme_par_processus_mois = df_resultat.groupby(['Processus', 'Mois'])['No décompte'].transform('sum')\n",
+    "somme_par_processus_mois = df_resultat.groupby(['Processus', 'Mois'])['Ndecompte'].transform('sum')\n",
     "\n",
     "#Création de la colonne 'Echantillon' qui servira pour la suite\n",
-    "df_resultat['Echantillon'] = ((df_resultat['No décompte'] / somme_par_processus_mois) * 50).round(0).astype(int)\n",
+    "df_resultat['Echantillon'] = ((df_resultat['Ndecompte'] / somme_par_processus_mois) * 50).round(0).astype(int)\n",
     "df_resultat"
    ]
   },
@@ -181,7 +181,7 @@
     "#Boucle sur les mois uniques présents dans df_resultat\n",
     "for mois in df_resultat['Mois'].unique():\n",
     "    #On filtre les données du mois en cours\n",
-    "    df_final_filtered_mois = df_final[(df_final['Montant remboursé'] > 0) & (df_final['Mois'] == mois)]\n",
+    "    df_final_filtered_mois = df_final[(df_final['Mremboursé'] > 0) & (df_final['Mois'] == mois)]\n",
     "    \n",
     "    #Boucle sur les processus\n",
     "    for processus in ['Automatisation', 'Acte de ville', 'Hospitalisation']:\n",
@@ -198,7 +198,7 @@
     "        #On sélectionne aléatoirement des décomptes selon les quotas\n",
     "        selected_decomptes_final = []\n",
     "        for strate, n in quotas_final.items():\n",
-    "            decomptes = df_processus[df_processus['Strate décompte'] == strate]['No décompte'].unique()\n",
+    "            decomptes = df_processus[df_processus['Strate décompte'] == strate]['Ndecompte'].unique()\n",
     "            if len(decomptes) > n:\n",
     "                selected = pd.Series(decomptes).sample(n, random_state=42).tolist()\n",
     "            else:\n",
@@ -206,7 +206,7 @@
     "            selected_decomptes_final.extend(selected)\n",
     "\n",
     "        #On extrait les lignes correspondantes et on les stocke dans le bon dictionnaire\n",
-    "        df_selected = df_processus[df_processus['No décompte'].isin(selected_decomptes_final)]\n",
+    "        df_selected = df_processus[df_processus['Ndecompte'].isin(selected_decomptes_final)]\n",
     "        \n",
     "        if processus == 'Automatisation':\n",
     "            controle_post_auto[f\"{mois}_contrôle_post_auto\"] = df_selected\n",
@@ -217,7 +217,7 @@
     "\n",
     "#Affichage des résultats\n",
     "for key, df in {**controle_post_auto, **controle_post_adv, **controle_post_hospi}.items():\n",
-    "    print(f\"{key}, nombre de décomptes : {df['No décompte'].nunique()}\")\n",
+    "    print(f\"{key}, nombre de décomptes : {df['Ndecompte'].nunique()}\")\n",
     "    print('Nombre de lignes :', df.shape[0])\n",
     "    display(df.head(5))"
    ]
@@ -233,32 +233,32 @@
     "#Boucle sur chaque mois unique\n",
     "for mois in df_flag_O['Mois'].unique():\n",
     "    #On filtre les données du mois en cours\n",
-    "    df_filtered_mois = df_flag_O[(df_flag_O['Montant remboursé'] > 0) & (df_flag_O['Mois'] == mois)]\n",
+    "    df_filtered_mois = df_flag_O[(df_flag_O['Mremboursé'] > 0) & (df_flag_O['Mois'] == mois)]\n",
     "\n",
     "    #On initialise la liste des décomptes sélectionnés\n",
     "    selected_decomptes_flag_O = []\n",
     "\n",
-    "    #Automatisation (Numéro agent commence par 'I')\n",
-    "    decomptes_auto = df_filtered_mois[df_filtered_mois['Numéro agent'].str.startswith('I')]['No décompte'].unique()\n",
+    "    #Automatisation (Nagent commence par 'I')\n",
+    "    decomptes_auto = df_filtered_mois[df_filtered_mois['Nagent'].str.startswith('I')]['Ndecompte'].unique()\n",
     "    selected_decomptes_flag_O.extend(pd.Series(decomptes_auto).sample(min(len(decomptes_auto), 3), random_state=42).tolist())\n",
     "\n",
     "    #Acte de ville\n",
     "    decomptes_adv = df_filtered_mois[\n",
-    "        (df_filtered_mois['Libellé type prestation'] == 'Acte de ville') & \n",
-    "        (~df_filtered_mois['Numéro agent'].str.startswith('I'))\n",
-    "    ]['No décompte'].unique()\n",
+    "        (df_filtered_mois['LTprestation'] == 'Acte de ville') & \n",
+    "        (~df_filtered_mois['Nagent'].str.startswith('I'))\n",
+    "    ]['Ndecompte'].unique()\n",
     "    selected_decomptes_flag_O.extend(pd.Series(decomptes_adv).sample(min(len(decomptes_adv), 3), random_state=42).tolist())\n",
     "\n",
     "    #Hospitalisation\n",
-    "    decomptes_hospi = df_filtered_mois[df_filtered_mois['Libellé type prestation'] == 'Hospitalisation']['No décompte'].unique()\n",
+    "    decomptes_hospi = df_filtered_mois[df_filtered_mois['LTprestation'] == 'Hospitalisation']['Ndecompte'].unique()\n",
     "    selected_decomptes_flag_O.extend(pd.Series(decomptes_hospi).sample(min(len(decomptes_hospi), 3), random_state=42).tolist())\n",
     "\n",
     "    #On extrait les lignes correspondantes et on les stocke dans un dataframe\n",
-    "    controle_complementaire_par_mois[f\"{mois}_contrôle_complémentaire\"] = df_filtered_mois[df_filtered_mois['No décompte'].isin(selected_decomptes_flag_O)]\n",
+    "    controle_complementaire_par_mois[f\"{mois}_contrôle_complémentaire\"] = df_filtered_mois[df_filtered_mois['Ndecompte'].isin(selected_decomptes_flag_O)]\n",
     "\n",
     "#Affichage des résultats\n",
     "for mois, df_controle in controle_complementaire_par_mois.items():\n",
-    "    print(f\"{mois}, nombre de décomptes : {df_controle['No décompte'].nunique()}\")\n",
+    "    print(f\"{mois}, nombre de décomptes : {df_controle['Ndecompte'].nunique()}\")\n",
     "    print('Nombre de lignes :', df_controle.shape[0])\n",
     "    display(df_controle)"
    ]
@@ -273,8 +273,8 @@
     "\n",
     "#Filtrage des décomptes fronting\n",
     "df_fronting = df_final[\n",
-    "    (df_final['Numéro agent'].str.startswith('A')) &\n",
-    "    (df_final['Soins France/Etranger'] == 'SOINS ETRANGER')\n",
+    "    (df_final['Nagent'].str.startswith('A')) &\n",
+    "    (df_final['SF/E'] == 'SOINS ETRANGER')\n",
     "]\n",
     "\n",
     "#Boucle sur chaque mois unique\n",
@@ -282,15 +282,15 @@
     "    df_mois = df_fronting[df_fronting['Mois'] == mois]  # Filtrer par mois\n",
     "\n",
     "    #Boucle sur chaque partenaire\n",
-    "    for partenaire in df_mois['Nom destinataire'].unique():\n",
-    "        df_partenaire = df_mois[df_mois['Nom destinataire'] == partenaire]\n",
+    "    for partenaire in df_mois['Ndestinataire'].unique():\n",
+    "        df_partenaire = df_mois[df_mois['Ndestinataire'] == partenaire]\n",
     "\n",
     "        #On agrège le montant total remboursé par décompte\n",
-    "        df_agg = df_partenaire.groupby(['No décompte', 'Libellé type prestation'])['Montant remboursé'].sum().reset_index()\n",
+    "        df_agg = df_partenaire.groupby(['Ndecompte', 'LTprestation'])['Mremboursé'].sum().reset_index()\n",
     "\n",
     "        #On compte le nombre de décomptes uniques par processus\n",
-    "        nb_hospi = len(df_agg[df_agg['Libellé type prestation'] == 'Hospitalisation'])\n",
-    "        nb_adv = len(df_agg[df_agg['Libellé type prestation'] == 'Acte de ville'])\n",
+    "        nb_hospi = len(df_agg[df_agg['LTprestation'] == 'Hospitalisation'])\n",
+    "        nb_adv = len(df_agg[df_agg['LTprestation'] == 'Acte de ville'])\n",
     "\n",
     "        #Si un seul type est disponible, prendre les 5 dans ce type\n",
     "        if nb_hospi == 0:\n",
@@ -304,16 +304,16 @@
     "            quota_adv = 5 - quota_hospi\n",
     "\n",
     "        #Sélection des décomptes avec les montants remboursés les plus élevés\n",
-    "        top_hospi = df_agg[df_agg['Libellé type prestation'] == 'Hospitalisation'] \\\n",
-    "            .sort_values(by='Montant remboursé', ascending=False) \\\n",
-    "            .head(quota_hospi)['No décompte']\n",
+    "        top_hospi = df_agg[df_agg['LTprestation'] == 'Hospitalisation'] \\\n",
+    "            .sort_values(by='Mremboursé', ascending=False) \\\n",
+    "            .head(quota_hospi)['Ndecompte']\n",
     "\n",
-    "        top_adv = df_agg[df_agg['Libellé type prestation'] == 'Acte de ville'] \\\n",
-    "            .sort_values(by='Montant remboursé', ascending=False) \\\n",
-    "            .head(quota_adv)['No décompte']\n",
+    "        top_adv = df_agg[df_agg['LTprestation'] == 'Acte de ville'] \\\n",
+    "            .sort_values(by='Mremboursé', ascending=False) \\\n",
+    "            .head(quota_adv)['Ndecompte']\n",
     "\n",
-    "        #On rejoint les lignes complètes avec la sélection des No décomptes\n",
-    "        df_selected = df_partenaire[df_partenaire['No décompte'].isin(pd.concat([top_hospi, top_adv]))]\n",
+    "        #On rejoint les lignes complètes avec la sélection des Ndecomptes\n",
+    "        df_selected = df_partenaire[df_partenaire['Ndecompte'].isin(pd.concat([top_hospi, top_adv]))]\n",
     "\n",
     "        #Stockage des résultats\n",
     "        key = f\"{mois}_contrôle_fronting\"\n",
@@ -324,7 +324,7 @@
     "\n",
     "#Affichage des résultats\n",
     "for mois, df_controle in controle_fronting_par_mois.items():\n",
-    "    print(f\"{mois}, nombre de décomptes : {df_controle['No décompte'].nunique()}\")\n",
+    "    print(f\"{mois}, nombre de décomptes : {df_controle['Ndecompte'].nunique()}\")\n",
     "    print('Nombre de lignes :', df_controle.shape[0])\n",
     "    display(df_controle.head(10))"
    ]
