--- a/Echantillon contrôle.ipynb
+++ b/Echantillon contrôle.ipynb
@@ -21,7 +21,7 @@
    "source": [
     "#############################################################\n",
     "#############################################################\n",
-    "df = pd.read_excel("data/input_fichier.xlsx") #Il faudra changer le chemin et/ou le nom du fichier ici d'un mois/trimestre/année à l'autre\n",
+    "df = pd.read_excel('data/input_fichier.xlsx') #Il faudra changer le chemin et/ou le nom du fichier ici d'un mois/trimestre/année à l'autre\n",
     "#############################################################\n",
     "#############################################################\n",
     "\n",
