--- a/Echantillon contrôle.ipynb
+++ b/Echantillon contrôle.ipynb
@@ -149,7 +149,7 @@
     "df_concat_filtered['Processus'] = np.select(conditions, choices, default='Inconnu')\n",
     "\n",
     "#Nouvelle colonne pour extraire le mois\n",
-    "df_concat_filtered['Mois'] = df_concat_filtered['Date de règlement'].dt.to_period('M')\n",
+    "df_concat_filtered['Mois'] = df_concat_filtered['Dreglement'].dt.to_period('M')\n",
     "\n",
     "#On groupe par 'Processus', 'Strate décompte' et 'Mois', pour calculer le nombre de décomptes uniques\n",
     "df_resultat = df_concat_filtered.groupby(['Processus', 'Strate décompte', 'Mois'])['Ndecompte'].nunique().reset_index()\n",
@@ -173,8 +173,8 @@
     "controle_post_adv = {}\n",
     "controle_post_hospi = {}\n",
     "\n",
-    "df_final['Mois'] = df_final['Date de règlement'].dt.to_period('M')\n",
-    "df_flag_O['Mois'] = df_flag_O['Date de règlement'].dt.to_period('M')\n",
+    "df_final['Mois'] = df_final['Dreglement'].dt.to_period('M')\n",
+    "df_flag_O['Mois'] = df_flag_O['Dreglement'].dt.to_period('M')\n",
     "\n",
     "df_final = df_final.merge(df_concat_filtered[['ID_global', 'Processus']], on='ID_global', how='left')\n",
     "\n",
