--- a/Ajout features.ipynb
+++ b/Ajout features.ipynb
@@ -18,11 +18,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Charge le mois en cours\n",
+    "#Charge le fichier1\n",
     "\n",
     "#############################################################\n",
     "#############################################################\n",
-    "mois = pd.read_excel(\"../2025/T1/Requete PC_AC_2025_01.xlsx\", sheet_name=0) #Il faudra changer le chemin et/ou le nom du fichier ici d'un mois/trimestre/année à l'autre\n",
+    "fichier1 = pd.read_excel('data/input_fichier1.xlsx') #Il faudra changer le chemin et/ou le nom du fichier ici d'un mois/trimestre/année à l'autre\n",
     "#############################################################\n",
     "#############################################################\n",
     "\n",
@@ -35,11 +35,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Charge combi.xlsx\n",
-    "combi363 = pd.read_excel('../Extractions/combi 363.xlsx', sheet_name=0)\n",
-    "combi363.rename(columns={'DCS_SEQ':'Numéro de séquence'}, inplace=True)\n",
-    "combi363['Combi'] = 363\n",
-    "combi363"
+    "#Charge le fichier2\n",
+    "fichier2 = pd.read_excel('data/input_fichier2.xlsx')\n",
+    "fichier2.rename(columns={'Col1':'Nséquence'}, inplace=True)\n",
+    "fichier2['Combi'] = 363\n",
+    "fichier2"
    ]
   },
   {
@@ -48,12 +48,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Charge delegation.xlsx\n",
-    "delegation = pd.read_excel('../Extractions/delegation.xlsx', sheet_name=0)\n",
-    "delegation = delegation[:-1]\n",
-    "delegation['DCS_SEQ'] = delegation['DCS_SEQ'].astype(int)\n",
-    "delegation.rename(columns={'DCS_SEQ':'Numéro de séquence', 'DLG_COD':'Délégation'}, inplace=True)\n",
-    "delegation"
+    "#Charge le fichier3\n",
+    "fichier3 = pd.read_excel('data/input_fichier3.xlsx')\n",
+    "fichier3 = fichier3[:-1]\n",
+    "fichier3['Col1'] = fichier3['Col1'].astype(int)\n",
+    "fichier3.rename(columns={'Col1':'Nséquence', 'DLG_COD':'Délégation'}, inplace=True)\n",
+    "fichier3"
    ]
   },
   {
@@ -62,16 +62,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Charge regul.xlsx et franchise.xlsx\n",
-    "#Elles serviront à créer la colonne \"Type de remboursement\"\n",
-    "regul = pd.read_excel('../Extractions/regul.xlsx', sheet_name=0)\n",
-    "regul.rename(columns={'DCS_SEQ':'Numéro de séquence'}, inplace=True)\n",
-    "regul['Flag regul'] = 'O'\n",
-    "display(regul)\n",
-    "franchise = pd.read_excel('../Extractions/franchise.xlsx', sheet_name=0)\n",
-    "franchise.rename(columns={'DCS_SEQ':'Numéro de séquence'}, inplace=True)\n",
-    "franchise['Flag franchise'] = 'O'\n",
-    "display(franchise)"
+    "#Charge fichier4 et fichier5\n",
+    "#Elles serviront à créer la colonne 'Tremb'\n",
+    "fichier4 = pd.read_excel('data/input_fichier4.xlsx')\n",
+    "fichier4.rename(columns={'Col1':'Nséquence'}, inplace=True)\n",
+    "fichier4['Freg'] = 'O'\n",
+    "display(fichier4)\n",
+    "fichier5 = pd.read_excel('data/input_fichier5.xlsx')\n",
+    "fichier5.rename(columns={'Col1':'Nséquence'}, inplace=True)\n",
+    "fichier5['Ffra'] = 'O'\n",
+    "display(fichier5)"
    ]
   },
   {
@@ -80,10 +80,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Charge zpy.csv\n",
-    "zpy = pd.read_csv('../Extractions/zpy.csv')\n",
-    "zpy.rename(columns={'PAY_NOM':\"Pays d'exécution\", 'ZPY_COD':'Code région'}, inplace=True)\n",
-    "zpy"
+    "#Charge le fichier6\n",
+    "fichier6 = pd.read_csv('data/input_fichier6.csv')\n",
+    "fichier6.rename(columns={'Col2':'Pexecution', 'Col3':'Cregion'}, inplace=True)\n",
+    "fichier6"
    ]
   },
   {
@@ -94,12 +94,12 @@
    "source": [
     "#On effectue les jointures\n",
     "test = (\n",
-    "    mois\n",
-    "    .merge(combi363, on='Numéro de séquence', how='left')\n",
-    "    .merge(delegation, on='Numéro de séquence', how='left')\n",
-    "    .merge(regul, on='Numéro de séquence', how='left')\n",
-    "    .merge(franchise, on ='Numéro de séquence', how='left')\n",
-    "    .merge(zpy, on=\"Pays d'exécution\", how='left')\n",
+    "    fichier1\n",
+    "    .merge(fichier2, on='Nséquence', how='left')\n",
+    "    .merge(fichier3, on='Nséquence', how='left')\n",
+    "    .merge(fichier4, on='Nséquence', how='left')\n",
+    "    .merge(fichier5, on ='Nséquence', how='left')\n",
+    "    .merge(fichier6, on='Pexecution', how='left')\n",
     ")\n",
     "\n",
     "test"
@@ -111,8 +111,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#On vérifie pour quels pays le Code région est vide\n",
-    "test.loc[test['Code région'].isna()][\"Pays d'exécution\"].unique()"
+    "#On vérifie pour quels pays le Cregion est vide\n",
+    "test.loc[test['Cregion'].isna()]['Pexecution'].unique()"
    ]
   },
   {
@@ -122,7 +122,7 @@
    "outputs": [],
    "source": [
     "#Il ne s'agit que de la France donc on remplace les valeurs manquantes par 0\n",
-    "test['Code région'] = test['Code région'].fillna(0).astype(int)\n",
+    "test['Cregion'] = test['Cregion'].fillna(0).astype(int)\n",
     "test"
    ]
   },
@@ -132,26 +132,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Liste des franchises actes\n",
-    "franchises_actes = ['FRAM', 'FRPH', 'FRTR', 'FDAM', 'FDPH', 'FDTR']\n",
+    "#Liste des actes\n",
+    "liste_actes = ['Liste des actes']\n",
     "\n",
-    "#On ajoute la colonne vide \"Type de remboursement\" en avant-dernière position\n",
-    "test.insert(len(test.columns)-1, 'Type de remboursement', None)\n",
+    "#On ajoute la colonne vide 'Tremb' en avant-dernière position\n",
+    "test.insert(len(test.columns)-1, 'Tremb', None)\n",
     "\n",
     "#Fonction pour appliquer la logique dans la nouvelle colonne\n",
     "def assign_type(row):\n",
-    "    if row['Flag regul'] == 'O' and row['Code acte'] not in franchises_actes:\n",
+    "    if row['Freg'] == 'O' and row['Cacte'] not in liste_actes:\n",
     "        return 'Régularisation'\n",
-    "    elif row['Flag franchise'] == 'O' and row['Code acte'] in franchises_actes:\n",
+    "    elif row['Ffra'] == 'O' and row['Cacte'] in liste_actes:\n",
     "        return 'Franchises'\n",
-    "    elif pd.isna(row['Type de remboursement']) and row['Code acte'] not in franchises_actes:\n",
+    "    elif pd.isna(row['Tremb']) and row['Cacte'] not in liste_actes:\n",
     "        return 'Remboursement'\n",
     "    else:\n",
     "        return None  #Si aucune condition n'est remplie, la cellule reste vide\n",
     "    \n",
     "#On applique puis on retire les colonnes Flag qui sont désormais inutiles\n",
-    "test['Type de remboursement'] = test.apply(assign_type, axis=1)\n",
-    "test.drop(['Flag regul', 'Flag franchise'], axis=1, inplace=True)\n",
+    "test['Tremb'] = test.apply(assign_type, axis=1)\n",
+    "test.drop(['Freg', 'Ffra'], axis=1, inplace=True)\n",
     "test"
    ]
   },
@@ -177,7 +177,7 @@
     "\n",
     "#############################################################\n",
     "#############################################################\n",
-    "test.to_excel('../2025/T1/combi 363 delegation type_remb et zpy.xlsx', index=False) #Il faudra changer le chemin d'enregistrement d'un trimestre/année à l'autre\n",
+    "test.to_excel('data/output_fichier.xlsx', index=False) #Il faudra changer le chemin d'enregistrement d'un trimestre/année à l'autre\n",
     "#############################################################\n",
     "#############################################################"
    ]
