--- a/Ajout features.ipynb
+++ b/Ajout features.ipynb
@@ -52,7 +52,7 @@
     "fichier3 = pd.read_excel('data/input_fichier3.xlsx')\n",
     "fichier3 = fichier3[:-1]\n",
     "fichier3['Col1'] = fichier3['Col1'].astype(int)\n",
-    "fichier3.rename(columns={'Col1':'Nséquence', 'DLG_COD':'Délégation'}, inplace=True)\n",
+    "fichier3.rename(columns={'Col1':'Nséquence', 'Col4':'Deleg'}, inplace=True)\n",
     "fichier3"
    ]
   },
