--- a/Ajout features.ipynb
+++ b/Ajout features.ipynb
@@ -26,7 +26,7 @@
     "#############################################################\n",
     "#############################################################\n",
     "\n",
-    "mois"
+    "fichier1"
    ]
   },
   {
